historia 1 directo a main

--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     <button>historia 2</button>
     <button>historia 3</button>
     <button>historia 4</button>
+    <h1>Sistema de Tienda</h1>
+<a href="vistas/productos/listar.php">Gestionar Productos</a>
+<a href="vistas/lotes/listar.php">Control de Lotes</a><br>
 </body>
 </html>
