--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 <body>
     <button>historia 1</button>
     <button>historia 2</button>
-    <button>historia 3</button>
+
+    <a href="vistas/ventas/venta.php">
+    <button>Historia 3 - Ventas</button></a>
     <button>historia 4</button>
+    
     <h1>Sistema de Tienda</h1>
 <a href="vistas/productos/listar.php">Gestionar Productos</a>
 <a href="vistas/lotes/listar.php">Control de Lotes</a><br>
