--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
 <body>
     <button>historia 1</button>
     <button>historia 2</button>
-
-    <a href="vistas/ventas/venta.php">
-    <button>Historia 3 - Ventas</button></a>
+    <a href="vistas/ventas/venta.php"><button>Historia 3 - Ventas</button></a>
     <button>historia 4</button>
     
     <h1>Sistema de Tienda</h1>
