--- a/index.html
+++ b/index.html
@@ -6,23 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="public/img/logo.png">
+  <link rel="icon" type="image/png" href="/PULPERIA-CHEBS/public/img/logo.png">
 
-  <!-- Tailwind -->
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          colors: {
-            chebs: {
-              green: '#2DB14B'
-            }
-          }
-        }
-      }
-    }
-  </script>
+  <!-- ✅ Tailwind LOCAL (sin internet) -->
+  <link rel="stylesheet" href="/PULPERIA-CHEBS/dist/output.css?v=1">
 </head>
 
 <body class="min-h-screen bg-white">
@@ -31,7 +18,7 @@
 
     <!-- IMAGEN GRANDE -->
     <img
-      src="public/img/Loading.jpeg"
+      src="/PULPERIA-CHEBS/public/img/Loading.jpeg"
       alt="Pulpería Chebs"
       class="
         w-full
@@ -48,7 +35,7 @@
     </p>
 
     <!-- BOTÓN -->
-    <a href="index.php"
+    <a href="/PULPERIA-CHEBS/index.php"
        class="
          inline-flex items-center justify-center
          px-10 py-3
